# OculusRiftDK1

./: .gitignore  CMakeLists.txt  README.md  config
docs/: dk1_distortion_mesh_algorithm_math.md  dk1_simulator_design.md  dk1_tracker_inference_algorithm.md  dk_1_head_neck_tracking_model.md  python_probe_findings_for_c_inference.md
examples/: calibrate.c  dk1_dump.c  dk1_state_60hz.c
include/DK1Tracker/: DK1Error.h  DK1MetalDistortion.h  DK1Tracker.h  DK1Types.h
shaders/: DK1Distortion.metal
src/: DK1Config.c  DK1Config.h  DK1Distortion.c  DK1Distortion.h  DK1Estimator.c  DK1Estimator.h  DK1Estimator.h.pch  DK1HIDBackend.h  DK1HIDBackend_mac.c  DK1HeadModel.c  DK1HeadModel.h  DK1MetalDistortion.c  DK1Parser.c  DK1Parser.h  DK1Prediction.c  DK1RingBuffer.c  DK1RingBuffer.h  DK1RingBuffer.h.pch  DK1Tracker.c  dump_raw.c
tests/: test_config.c  test_distortion_mesh.c  test_estimator.c  test_eye_projection.c  test_head_model.c  test_keepalive.c  test_metal_distortion.c  test_parser.c  test_prediction.c
